--- a/public.css
+++ b/public.css
@@ -12,3 +12,38 @@
     --active-green-color: #D2091E;
 
   }
+
+.App,
+.header,
+.App__container,
+.stepper,
+.booking-step,
+.timetable,
+.fc-timeGridDay-view thead th:first-child,
+.fc-timeGridWeek-view thead th:first-child
+ {
+    background-color: transparent;
+}
+
+.navbar a:hover {
+    color: #fff;
+}
+
+.booking-step--touched .booking-step__body:not(.booking-step__body--open) {
+    border-color: #fff;
+    border-left-style: dashed;
+}
+
+.button--secondary {
+    color: #fff;
+}
+
+.react-datepicker__header,
+.react-datepicker {
+    background-color: transparent;
+    color: #fff;
+}
+
+.fc-timeGridWeek-view .fc-axis>span {
+    background: #243062;
+}
