--- a/public.css
+++ b/public.css
@@ -47,3 +47,8 @@
 .fc-timeGridWeek-view .fc-axis>span {
     background: #243062;
 }
+
+.header__menu > .menu,
+.header__menu > .select.select--with-icon {
+	display: none;
+}
